--- a/cix-main.org
+++ b/cix-main.org
@@ -1,6 +1,6 @@
 # File          : cix-main.org
 # Created       : Sat 07 Nov 2015 22:58:38
-# Last Modified : <2016-11-19 Sat 21:54:10 GMT> sharlatan
+# Last Modified : <2016-11-20 Sun 23:16:44 GMT> sharlatan
 # Maintainer    : sharlatan <sharlatanus@gmail.com>
 # Short         :
 
@@ -10,7 +10,7 @@
 #+TITLE: CIX
 /Collectlion of unIX utilities tips/
 
-** Intro
+* Intro
 
 The main purpouse of the project to collect templates, oneliners, examples in
 one place.
@@ -38,7 +38,7 @@ Man pages common sections.
 |         |     - |       - |     9 |   - | HP-UX general information          |
 |---------+-------+---------+-------+-----+------------------------------------|
 
-*** Basic
+** Basic
 For example, you know the command but not sure about package where it goes from
 
 /what package $CMD belongs to/
@@ -67,7 +67,7 @@ on *GNU/Linux*
     ~$ rpm -ql "$PACK" | grep -P "(?<=in/).+"             # path to command
     ~$ dpkg-query -L "$PACK" | grep -oP "(?<=in/).+"      # Debian dirived
 #+END_EXAMPLE
-** Index
+* Index
 /Make each program do one thing well/
 
 : <package-name><link><description>
@@ -81,6 +81,8 @@ on *GNU/Linux*
   + [[./spices/cix-gnu-core-utilities.org][gnu-core-utilities]] :: basic file, shell and text manipulation utilities
   + [[./spices/cix-man-db.org][man-db]] :: Tools for searching and reading man pages
   + [[./spices/cix-util-linux.org][util-linux]] :: is a standard package of the Linux operating system
+  + The Heirloom Project :: traditional implementations of standard Unix
+       utilities.
 
 - *File* /Everything is a file/!
   + [[./spices/cix-emacs.org][emacs]] :: GNU Emacs text editor
@@ -89,7 +91,8 @@ on *GNU/Linux*
   + [[./spices/cix-micro.org][micro]] :: a modern and intuitive terminal-based text editor
   + [[./spices/cix-nano.org][nano]] :: A small text editor
   + [[./spices/cix-sed.org][sed/ed]] :: A GNU stream text editor
-  + [[./spices/cix-vim.org][vim-enchanced]] :: A version of the VIM editor which includes recent enhancements
+  + [[./spices/cix-vim.org][vim-enchanced]] :: recent enhancements of vim
+  + [[file:./spices/cix-diffutils.org][diffutils]] :: A GNU collection of diff utilities
 
 - *Filesystem* /Partition file system craft and check/
   + [[./spices/cix-acl.org][acl]] :: Access control list utilities
@@ -132,13 +135,13 @@ on *GNU/Linux*
   + [[./spices/cix-fdupes.org][fdupes]] :: Finds duplicate files in a given set of directories
 
 - *Compress-Archive* /I'm a pac man/
-  + [[./spices/cix-gzip.org][gzip]] :: The GNU data compression program
-  + [[./spices/cix-gnu-tar.org][gnu-tar]] :: A GNU file archiving program
-  + [[./spices/cix-cpio.org][cpio]] :: A GNU archiving program
-  + [[./spices/cix-lrzip.org][lrzip]] :: Compression program optimized for large files
   + [[./spices/cix-bzip2.org][bzip2]] :: A file compression utility
-  + [[./spices/cix-xz.org][xz]] :: LZMA compression utilities
+  + [[./spices/cix-cpio.org][cpio]] :: A GNU archiving program
+  + [[./spices/cix-gnu-tar.org][gnu-tar]] :: A GNU file archiving program
+  + [[./spices/cix-gzip.org][gzip]] :: The GNU data compression program
+  + [[./spices/cix-lrzip.org][lrzip]] :: Compression program optimized for large files
   + [[./spices/cix-pax.org][pax]] :: POSIX File System Archiver
+  + [[./spices/cix-xz.org][xz]] :: LZMA compression utilities
 
 - *Networking* /We all live in the someone's subnet in/
   + [[./spices/cix-bind-utils.org][bind-utils]] :: utilities for querying DNS name server
@@ -163,6 +166,11 @@ on *GNU/Linux*
   + [[./spices/cix-tmux.org][tmux]] :: A terminal multiplexer
   + [[./spices/cix-zsh.org/][zsh]] ::  Powerful interactive shell
 
+- *Media* /Pleas your eyes and ears/
+  + [[file:./spices/cix-fontconfig.org][fontconfig]] :: Font configuration and customization library
+  + [[./spices/cix-ffmpeg.org][ffmpeg]] :: Digital VCR and streaming server
+  + [[file:./spices/cix-pulseaudio-utils.org][pulseaudio-utils]] :: PulseAudio sound server utilities
+
 - *Development* /In the fields of observation chance favors only the prepared mind./
   + [[./spices/cix-glibc-common.org][glibc-common]] :: Common binaries and locale data for glibc
 
@@ -175,21 +183,19 @@ on *GNU/Linux*
 - *Cryptograpy* /Who break Enigma code?/
   + [[./spices/cix-gpg.org][gnupg]] :: A GNU utility for secure communication and data storage
 
-- *GUI* /Pleas your eyes/
-  + [[file:./spices/cix-fontconfig.org][fontconfig]] :: Font configuration and customization library
-  + [[./spices/cix-ffmpeg.org][ffmpeg]] :: Digital VCR and streaming server
-
 - *Security* /It's never be save/
+  + pam :: An extensible library which provides authentication for applications
+  + [[file:./spices/cix-libselinux-utils.org][libselinux-utils]] :: SELinux libselinux utilies
 -----
-** Glosary
+* Glosary
 - DMI ::
 - sticky bit ::
 - GUI ::
 - restricted delition flag :: prevents unprivileged users from removing or
      renaming a file in the directory unless they own the file or the directory
 - MBR ::
-** References
-*** Books
+* References
+** Books
 - Ellen Sieve, Stephen Figgins, Robert Love & Arnold Robbinsp
   *LINUX in a nutshell 6th Edition;*
   O'reilly media, 2009;
@@ -200,26 +206,26 @@ on *GNU/Linux*
   *UNIX in a Nutshell*;
   O'reilly, 2008;
 
-*** Links
+** Links
 - GNU Coreutils http://www.gnu.org/software/coreutils/manual/coreutils.html
 - Basics of the Unix Philosophy http://homepage.cs.uri.edu/~thenry/resources/unix_art/ch01s06.html
 - Filenames and Pathnames in Shell: How to do it Correctly http://www.dwheeler.com/essays/filenames-in-shell.html
 - http://www.commandlinefu.com/commands/browse/sort-by-votes
 - http://everythingsysadmin.com/
 
-*** Wikis
+** Wikis
 - http://wiki.bash-hackers.org/
 - https://emacswiki.org/
 - https://wiki.archlinux.org/
 - https://wiki.freebsd.org/
 - https://wiki.ubuntu.com/
 
-*** Hubs
+** Hubs
 - Bioinformatics one-liners https://github.com/stephenturner/oneliners
 - Awesome Shell https://github.com/alebcay/awesome-shell
 - Awesome Bash https://github.com/awesome-lists/awesome-bash
 
-*** IRC
+** IRC
 - irc.freenode.org ::
   - #linux was created on 2001-02-09 23:16:24
   - #emacs was created on 2006-11-26 06:42:33
