--- a/spices/cix-parallel.org
+++ b/spices/cix-parallel.org
@@ -1,8 +1,10 @@
 # File           : cix-parallel.org
 # Created        : <2016-11-08 Tue 22:50:08 GMT>
-# Last Modified  : <2016-11-08 Tue 22:50:10 GMT> sharlatan
+# Last Modified  : <2016-11-19 Sat 21:54:10 GMT> sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Short          :
 
 #+OPTIONS: num:nil
+
+#+TITLE: GNU Parallel
